make sure blog pics aren't too big (#190)

--- a/_includes/assets/css/post.css
+++ b/_includes/assets/css/post.css
@@ -23,6 +23,8 @@ div.dithered-hover:focus img.blog-pic:first-child {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 1em;
+    max-height: 500px;
+    width: auto;
 }
 
 .center-text {
